# astgrep-java-unonfficial

./: .gitignore  README.md  pom.xml
rust/: Cargo.toml
rust/src/: lib.rs  node.rs  utils.rs
src/main/java/io/github/zheaoli/astgrep/: NativeObject.java  Node.java  Root.java
src/main/java/io/github/zheaoli/astgrep/arguments/: Core.java  Relation.java  Rule.java
src/main/java/io/github/zheaoli/astgrep/position/: Pos.java  Range.java
src/test/java/astgrep/: RangeTest.java  RuleTest.java  SimpleTest.java  TestMain.java  TraversalTest.java
