[package]
name = "ast-grep-java-unofficial"
description = "Search and Rewrite code at large scale using precise AST pattern"
keywords = ["ast", "pattern", "codemod", "search", "rewrite"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.80"
once_cell = "1.19.0"
jni = "0.21.1"
num_cpus = "1.15.0"
thiserror = "1.0.57"
ast-grep-core = "0.19.3"
ast-grep-config = "0.19.3"
ast-grep-language = "0.19.3"
